<resources>
    <string name="app_name">MyAccounts</string>

    <item name="id0" type="id" />

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- 侧滑栏菜单 -->
    <string name="discover">发现</string>
    <string name="collect">收藏</string>
    <string name="focus">关注</string>
    <string name="communication">交流</string>
    <string name="others">其它</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="sign_clcik">点击添加心情</string>

    <!-- User用户资料 -->
    <string name="alter_information">修改资料</string>

    <!-- 登陆注册 -->
    <string name="account">账号</string>
    <string name="username">用户名</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="quick_register">快速注册</string>
    <string name="error_register_user_name_null">用户名不可空</string>
    <string name="error_register_email_address_null">E-mail地址不可空</string>
    <string name="error_register_password_null">密码不可为空</string>
    <string name="error_register_take_gender_null">请自拍照片为头像</string>
    <string name="error_register_user_name_repeat">用户名已被注册，请重新填写</string>
    <string name="error_register_email_repeat">邮箱已被注册，请更换邮箱</string>
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>

    <!-- 头像来源 -->
    <string name="avatar_source">头像来源</string>
    <string-array name="get_avatar">
        <item>拍照</item>
        <item>相册</item>
        <item>取消</item>
    </string-array>

    <!-- 重置密码 -->
    <string name="send">发送</string>
    <string name="password_reset_error">重置密码出错，请确认邮箱地址！</string>
    <string name="password_reset_success">已发送重置密码到您邮箱，请登陆邮箱修改确认！</string>

</resources>
