<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/discover" />
        <item
            android:id="@+id/nav_collect"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/collect" />
        <item
            android:id="@+id/nav_focus"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/focus" />
        <item
            android:id="@+id/nav_communication"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/communication" />
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
